--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: rgba(0, 0, 0, 0.05);
+  height: 1400px;
+  margin: 0;
+  padding: 0 0 794px;
+
 }
 
 code {
@@ -25,3 +31,9 @@ code {
     'Courier New',
     monospace;
 }
+
+.booklist-and-heaader {
+  display: flex;
+  flex-direction: column;
+}
+
