--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,12 @@ code {
   flex-direction: column;
 }
 
+.header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 99px;
+  background-color: #fff;
+  padding-left: 100px;
+}
